samples/_failures_safe/1761506468_fee4ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a53afa5a.c: In function ‘main’:
./samples/SAFE/__tmp_a53afa5a.c:163:12: error: missing terminating " character
  163 |     printf("Graph has %d nodes and %d edges\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a53afa5a.c:163:5: error: expected expression at end of input
  163 |     printf("Graph has %d nodes and %d edges\n
      |     ^~~~~~
./samples/SAFE/__tmp_a53afa5a.c:163:5: error: expected declaration or statement at end of input
